[package]
name = "blog_os"
version = "0.1.0"
authors = ["utkarsh"]
edition = "2018"

[dev-dependencies]
array-init = "0.0.3"

[dependencies]
bootloader = { git = "https://github.com/uchanchlani/bootloader", branch = "active" }
volatile = "0.2.3"
spin = "0.4.9"
uart_16550 = "0.1.0"
x86_64 = "0.4.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "x86_64-blog_os.json"

[features]
integration-test = []

[profile.dev]

[profile.release]

